# supervisor-subagent

./: .gitignore  AgentRegistry.md  Agents.md  Evaluation.md  Logging.md  README.md  SlideOutline.md  Tutorial.md  plan.md  pyproject.toml
evals/: evaluators.py  judge.py  prompts.py  route_eval.py  run.py  runner.py  test_cases.yaml  types.py
evals/res/: test_cases.yaml
res/: suggestions.yaml  test_cases.yaml
res/sample_db/: schema.sql  seed.py
res/slot_db/: branches.json  categories.json  channels.json  countries.json  inventory.json  products.json  sales.json  signups.json
scripts/: Test_query_rewriter.py  eval.py  gen_slot_db.py  repro_rewriter_bug.py  smoke_query_rewriter.py  smoke_query_rewriter_router.py
scripts/cli/: _common.py  _examples.py  query_rewriter.py  query_rewriter_router.py
scripts/examples/: rewriter.yml  router.yml
src/: __init__.py  llm.py  main.py  state.py
src/agents/: __init__.py  registry.py
src/cli/: app.py  (+5 more)
tests/: test_cli_app.py  test_cli_commands.py  test_cli_examples.py  test_cli_streaming.py  test_cli_suggestions.py  test_decorator_combo.py  test_eval_loader.py  test_factory_seed.py  test_query_rewriter.py  test_response_generator.py  test_route_eval.py  test_slot_agent.py  test_slot_prompt.py  test_slot_registry.py  test_slot_repository.py  test_slot_resolve.py  test_slot_scenarios.py  test_sql_backend.py  test_sql_frontend.py  test_templated_sql_agent.py  test_templated_sql_registry.py  test_templated_sql_render.py  test_templated_sql_templates.py  test_tokenizer.py  test_tool_call_agent.py  test_tool_call_tools.py
(+85 files in other folders)
